tests/multiubuntu/test-cases/TC_21/TC_21_ingress_matchLabels_toPorts_singlePort.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: autopol-ingress-xvlbzgbaicmrajw
  namespace: multiubuntu
spec:
  endpointSelector:
    matchLabels:
      container: ubuntu-4
      group: group-2
  ingress:
  - fromEndpoints:
    - matchLabels:
        container: ubuntu-1
        group: group-1
        k8s:io.kubernetes.pod.namespace: multiubuntu
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
---
